--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a simple rest api for kaa",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
