--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "puppeteer": "^5.5.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "cors":"^2.8.5"
   }
 }
